fix get started margins and gaps

--- a/frontend/src/components/button/googleButton.css
+++ b/frontend/src/components/button/googleButton.css
@@ -32,7 +32,6 @@
 
     text-align: center;
     letter-spacing: 0.4px;
-    margin-top: 40px;
 }
 
 .google_button:hover {
